# AIPM

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml  repos.txt  test-repos.txt
.github/workflows/: harvest.yml
ai-tools-database/: .env  .env.example  API_DOCUMENTATION.md  ENVIRONMENT_SETUP.md  FINAL_SETUP.md  MCP_SETUP.md  README.md  SUPABASE_SETUP.md  config.py  converters.py  database.py  examples.py  load_credentials.py  main.py  mcp_config.json  mcp_server.py  models.py  provider_schemas.py  quick_start.py  requirements.txt  schema.sql  schemas.py  setup_supabase.md  simple_server.py  supabase_config.py  test_connection.py  test_mcp.py  tests.py  validators.py
aipm_github_harvester/: __init__.py  cli.py
aipm_github_harvester/core/: __init__.py  harvester.py  models.py
aipm_github_harvester/exporters/: __init__.py  formats.py
aipm_github_harvester/parsers/: __init__.py  factory.py  markdown_parser.py  mcp_parser.py  openapi_parser.py  python_parser.py  readme_parser.py
aipm_github_harvester/utils/: __init__.py  file_utils.py  github_client.py
tests/: conftest.py  test_models.py  test_parsers.py  test_utils.py
